--- a/GidroAtlas.Web/Components/Pages/Login.razor
+++ b/GidroAtlas.Web/Components/Pages/Login.razor
@@ -1,6 +1,7 @@
 @page "/"
+@using GidroAtlas.Web.Components.Layout
 @rendermode InteractiveServer
-
+@layout LoginLayout
 <PageTitle>Вход в систему - GidroAtlas</PageTitle>
 
 <link rel="stylesheet" href="login.css" />
