Добавил Дашборд Приоритезации, с актуальными данными, но без фильтров, добавил рабочую карту, надо поправить расположение маркеров

--- a/GidroAtlas.Web/Components/App.razor
+++ b/GidroAtlas.Web/Components/App.razor
@@ -4,18 +4,40 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <base href="/" />
-    <link rel="stylesheet" href="app.css" />
-    <link rel="stylesheet" href="GidroAtlas.Web.styles.css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <link href="_content/MudBlazor/MudBlazor.min.css?v=@(MudBlazor.Metadata.Version)" rel="stylesheet" />
-    <HeadOutlet />
+
+    <!-- MudBlazor CSS -->
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+
+    <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
+    <!-- ImportMap (Blazor .NET 8) -->
+    <ImportMap />
+
+    <link rel="icon" href="favicon.ico" />
+
+    <HeadOutlet @rendermode="InteractiveServer" />
 </head>
 
 <body>
-    <Routes />
+
+    <!-- ROUTING -->
+    <Routes @rendermode="InteractiveServer" />
+
+    <!-- Blazor runtime -->
     <script src="_framework/blazor.web.js"></script>
-    <script src="_content/MudBlazor/MudBlazor.min.js?v=@(MudBlazor.Metadata.Version)"></script>
+
+    <!-- MudBlazor JS -->
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+
+    <!-- Leaflet JS -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+    <!-- Leaflet Interop -->
+    <script src="js/leafletMap.js"></script>
+
 </body>
 
 </html>
