--- a/GidroAtlas.Web/Components/Layout/NavMenu.razor
+++ b/GidroAtlas.Web/Components/Layout/NavMenu.razor
@@ -2,6 +2,6 @@
 <MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Главная Страница</MudNavLink>
     <MudNavLink Href="Map" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Карта</MudNavLink>
-  @*   <MudNavLink Href="cities" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.People" IconColor="Color.Success">Города</MudNavLink> *@
+    <MudNavLink Href="dashboard" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.People" IconColor="Color.Success">Дашборд</MudNavLink>
 </MudNavMenu>
 
