--- a/GidroAtlas.Web/Components/Layout/MainLayout.razor
+++ b/GidroAtlas.Web/Components/Layout/MainLayout.razor
@@ -4,7 +4,7 @@
 <MudPopoverProvider />
 <MudDialogProvider />
 <MudSnackbarProvider />
-<MudLayout>
+<MudLayout Class="@( _isDarkMode ? "dark" : "" )">
     <MudAppBar Elevation="1">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
         <MudText Typo="Typo.h5" Class="ml-3">Application</MudText>
