Refactor dashboard with all filters + editing of water objects

--- a/GidroAtlas.Web/Components/App.razor
+++ b/GidroAtlas.Web/Components/App.razor
@@ -38,6 +38,9 @@
     <!-- Leaflet Interop -->
     <script src="js/leafletMap.js"></script>
 
+    <!-- File Utils -->
+    <script src="js/fileUtils.js"></script>
+
 </body>
 
 </html>
